# bm168x_examples

./: .gitignore
inference/: README.md  inference3.h  pack.sh
inference/bmgui/: container_widget.cpp  container_widget.h  container_widget.ui  video_render.h  video_widget.cpp
inference/bmutility/: bmutility.h  bmutility_image.h  bmutility_types.h  stream_pusher.h
inference/cvs10/: face_detector.cpp  face_extract.cpp
inference/examples/: CMakeLists.txt  configuration.h
inference/examples/face_detect/: worker.cpp
inference/examples/face_recognition/: face_extract.cpp  face_worker.cpp
inference/examples/multi/: yolov5s.cpp
inference/examples/openpose/: worker.cpp
inference/examples/retinaface/: retinaface.cpp  worker.cpp
inference/examples/safe_hat_detect/: face_worker.cpp
inference/examples/video_stitch/: CMakeLists.txt  encoder.cpp  main.cpp  stitch.cpp  stitch.h  worker.cpp  worker.h  yolov5s.cpp  yolov5s.h
inference/examples/yolov5/: worker.cpp  yolov5s.cpp
inference/tracker/MunkresAssignment/munkres/: munkres.h
other/py_demo_show_image_by_ws/: index.html  main.py  pull_frame.py  redis_websocket_srv.py  requirements.txt
other/py_demo_show_image_by_ws/utils/: logger.py  redis_client.py
simple/YOLOv7/: README.md
simple/YOLOv7/cpp/yolov7_bmcv/: CMakeLists.txt  README.md  main.cpp  yolov7.cpp  yolov7.hpp
simple/YOLOv7/python/: README.md  yolov7_bmcv_3output.py  yolov7_opencv_3output.py  yolov7_pytorch.py
simple/YOLOv7/scripts/: 0_prepare_model_data.sh  1_gen_fp32bmodel.sh  2_1_gen_fp32umodel.sh  2_2_gen_int8umodel.sh  2_3_gen_int8bmodel.sh  2_auto_gen_int8bmodel.sh
simple/YOLOv7/tools/: convert_imageset.py  evaluate_coco.py
simple/centernet/: .gitignore
simple/retinaface/python/utils/: box_utils.py  time_utils.py
simple/yolact/: README.md
simple/yolact/python/: yolact_bmcv.py  yolact_cv.py  yolact_onnx.py  yolact_pytorch.py  yolact_sail.py  yolact_trace_pt.py
simple/yolact/python/utils/: preprocess_bmcv.py  sophon_inference.py  utils.py
simple/yolact/python/yolact_utils/: sophon_inference.py
simple/yolact/scripts/converter/: readme.md
simple/yolov34/: README.md
simple/yolov34/cpp/cpp_cv_bmcv_bmrt_postprocess/: README.md
simple/yolov5/: README.md
simple/yolov5/cpp/: yolov5.cpp
simple/yolov5/python/: yolov5_bmcv.py  yolov5_bmcv_1output.py  yolov5_bmcv_3output.py  yolov5_cv.py  yolov5_opencv_1output.py  yolov5_opencv_3output.py  yolov5_sail.py
simple/yolov5/python/yolov5_utils/: postprocess_numpy.py  preprocess_bmcv.py  preprocess_numpy.py  utils.py
